--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^3.0.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.9",
