--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
