--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "connect-mongodb-session": "^3.1.1",
+    "dotenv": "^16.3.2",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
@@ -24,6 +25,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "mysql2": "^3.6.5",
+    "nodemailer": "^6.9.8",
     "pug": "^3.0.2",
     "sequelize": "^6.35.1"
   }
