--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.5",
     "nodemailer": "^6.9.8",
+    "pdfkit": "^0.14.0",
     "pug": "^3.0.2",
     "sequelize": "^6.35.1"
   }
