--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nodemailer": "^6.9.8",
     "pdfkit": "^0.14.0",
     "pug": "^3.0.2",
-    "sequelize": "^6.35.1"
+    "sequelize": "^6.35.1",
+    "stripe": "^14.17.0"
   }
 }
